force-app/main/default/objects/CEC_Country_Mapping__mdt/CEC_Country_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>CEC Country Mapping</label>
    <pluralLabel>CEC Country Mappings</pluralLabel>
</CustomObject>