force-app/main/default/objects/CEC_Country_Mapping__mdt/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <defaultValue>false</defaultValue>
    <label>City</label>
    <type>Checkbox</type>
</CustomField>