force-app/main/default/objects/CEC_Country_Mapping__mdt/fields/Country_ISO2Code__c.field-meta.xml
<CustomField>
    <fullName>Country_ISO2Code__c</fullName>
    <label>Country ISO2Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>