force-app/main/default/objects/CEC_Country_Mapping__mdt/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Postal Code</label>
    <type>Checkbox</type>
</CustomField>